--- a/DaejeonTicket/DaejeonTicket.vcxproj
+++ b/DaejeonTicket/DaejeonTicket.vcxproj
@@ -191,6 +191,9 @@
   <ItemGroup>
     <ClInclude Include="DaejeonTicket.h" />
     <ClInclude Include="DaejeonTicketDlg.h" />
+    <ClInclude Include="note.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
