add board application

--- a/board_application/Image_load_regacy/Makefile
+++ b/board_application/Image_load_regacy/Makefile
@@ -27,7 +27,7 @@ export AS LD CC CPP AR NM STRIP OBJCOPY OBJDUMP RANLIB CFLAGS
 
 PROJ = ImageLoad_Test
 
-OBJS = ImageLoad_Test.o uart_api.o cam_disp.o robot_protocol.o
+OBJS = ImageLoad_Test.o uart_api.o cam_disp.o
 
 
 all: $(PROJ)
